--- a/css/StyleSheet.css
+++ b/css/StyleSheet.css
@@ -1,3 +1,27 @@
-﻿body
-{
+﻿.divTop{
+    display: flex;
+    align-items: center;
+    border: 2px solid blue;
+    flex-flow: column;
+    width: 600px;
+    height: 600px;
+    margin: auto;
+    padding-top:20px;
+}
+form{
+    width: 50%;
+    height:50%;
+    padding: 30px 20px;
+    margin: 8px 0;
+    display: flex;
+    align-items:center;
+    flex-direction:column;
+  }
+label {
+    font-weight:bold;
+    font-family:Arial;
+    padding:15px 0 15px 0;
+}
+#_mesage{
+    height:10220px;
 }
