--- a/css/StyleSheet.css
+++ b/css/StyleSheet.css
@@ -1,16 +1,17 @@
-﻿header {
+﻿
+header {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding-top: 10px;
     font-size: 28px;
     font-weight: bold;
 }
-.divForm{
-    max-width:auto;
-    height: 400px;
-    margin:auto;
-    border-bottom:2px solid black;
-    border-radius:5px
+.divForm {
+    background-color:#d9d9d9;
+    max-width: auto;
+    height:300px;
+    margin: auto;
+  
 }
 form{
     display:flex;
@@ -18,11 +19,33 @@ form{
     flex-direction:column;
     padding-top:20px;
 }
-label {
-    padding:5px 0 5px 0;
-    font-family:Tahoma;
-    font-weight:bold;
+input {
+    margin-bottom: 10px;
+    box-sizing:border-box;
+    font-family:Arial, Helvetica, sans-serif;
+    border-style:hidden;
 }
-.sexo{
-    padding:5px 0 5px 0;
+textarea{
+    box-sizing:border-box;
+    font-family:Arial, Helvetica, sans-serif;
+    border-style:hidden;
 }
+
+.divBot {
+    width:auto;
+    height: 300px;
+    margin: auto;
+    background-color: #eaeaea;
+}
+.select{
+    display:flex;
+    align-items:center;
+    margin:auto;
+    justify-content:center;
+}
+img{
+    
+    margin:30px;
+   display:block;
+}
+
